<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bayraktar.stockcontrol.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_stocks"
        android:name="com.bayraktar.stockcontrol.ui.stock.StockFragment"
        android:label="@string/title_stocks"
        tools:layout="@layout/fragment_stock">
        <argument
            android:name="hashMap"
            app:argType="java.util.HashMap" />
        <action
            android:id="@+id/action_navigation_stocks_self"
            app:destination="@id/navigation_stocks" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bayraktar.stockcontrol.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />


</navigation>